# challenge_airbnb

./: manage.py  pyproject.toml  readme.md
airbnb1003/: asgi.py  settings.py  urls.py  wsgi.py
common/: models.py
tweets/: admin.py  models.py  serializers.py  urls.py  views.py
tweets/migrations/: 0001_initial.py  0002_initial.py  0002_rename_writer_tweet_user.py  0003_alter_like_tweet_alter_like_user_alter_tweet_user.py
tweets/templates/: all_tweets.html  tweet_detail.html
users/: admin.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_user_name_alter_user_first_name_alter_user_last_name.py
